2010-02-06  Ankit Jain  <jankit@novell.com>

	* ToolTask.cs (SkipTaskExecution): Use ValidateParameters method.
	Remove some MonoTODOs.

2009-11-25  Ankit Jain  <jankit@novell.com>

	* ToolLocationHelper.cs: Set directory for 3.0 framework
	to "2.0"

2009-11-09  Ankit Jain  <jankit@novell.com>

	* TargetDotNetFrameworkVersion.cs (Version30):
	(Version35): New.
	* ToolLocationHelper.cs: Support 3.0 and 3.5 also.

2009-10-13  Ankit Jain  <jankit@novell.com>

	* TaskLoggingHelper.cs:
	* ToolTask.cs: Fix warnings.

2009-10-12  Ankit Jain  <jankit@novell.com>

	* TaskLoggingHelper.cs: Use the buildEngine.ProjectFileOfTaskNode
	in the event args.

2009-10-12  Ankit Jain  <jankit@novell.com>

	* ToolTask.cs (ExecuteTool): Don't set toolOutput to null.
	(HandleTaskExecutionErrors): toolOutput can be null.
	Set toolOutput to null here.

2009-10-06  Ankit Jain  <jankit@novell.com>

	* ToolTask.cs (Execute): HandleTaskExecutionErrors is called only
	if exitCode != 0.
	(ExecuteTool): Move logging of exitcode to HandleTaskExecutionErrors.
	Remove MonoTODOs.
	* TaskLoggingHelper.cs (LogMessageFromText): New.
	(LogMessage): Refactor to use above.

2009-10-02  Ankit Jain  <jankit@novell.com>

	* AppDomainIsolatedTask.cs (BuildEngine): Init 'log'.

2009-09-29  Ankit Jain  <jankit@novell.com>

	* ToolTask.cs (ExecuteTool): Use LogToolCommand, instead of
	directly logging.
	(LogToolCommand): Implement.

2009-09-28  Ankit Jain  <jankit@novell.com>

	* ToolTask.cs (ProcessOuputTool): Move logging of tool
	output from here to ..
	(ExecuteTool): .. here. As, ProcessOuputTool can be
	overridden.

2009-09-24  Ankit Jain  <jankit@novell.com>

	* ToolTask.cs (HasLoggedErrors): Add missing property.

2009-09-23  Ankit Jain  <jankit@novell.com>

	* TaskLoggingHelper.cs (LogErrorFromException): Add missing overload.

2009-09-10  Ankit Jain  <jankit@novell.com>

	* TaskLoggingHelper.cs (FormatString): Use the unformatted string
	even if the args array was empty.
